<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="swishlive.com.swishlive.MatchConfigurationActivity"
    android:background="@color/swishBlue"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textViewChooseSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseYourSport"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textViewGameParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configureMatch"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/gridViewSportChoices"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editTextTeamOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:hint="@string/myTeamName"
        android:textSize="15sp"
        android:inputType="textPersonName"
        android:textColor="@color/swishBlue"
        android:textColorHint="@color/swishBlue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGameParameters"
 />


    <Button
        android:id="@+id/buttonConfigurationDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startGame"
        android:background="@drawable/button_shape"
        android:textColor="@color/swishBlue"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTeamTwo"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:elevation="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editTextTeamTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/otherTeamName"
        android:inputType="textPersonName"
        android:textColor="@color/swishBlue"
        android:textColorHint="@color/swishBlue"
        android:background="@drawable/edit_text_shape"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTeamOne"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <GridView
        android:id="@+id/gridViewSportChoices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"


        android:columnWidth="40dp"
        android:gravity="center"
        android:numColumns="3"
        android:background="@color/swishBlue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseSport" />
</android.support.constraint.ConstraintLayout>
